Fix site nav toggle on mobile

--- a/pipeline/scss/components/_buttons.scss
+++ b/pipeline/scss/components/_buttons.scss
@@ -44,7 +44,7 @@ a[role="button"] {
   width: 40px;
   height: 2px;
   border-radius: 50%;
-  background-color: $hugo-white;
+  background-color: inherit;
   position: absolute;
   top: -20px;
   right: -20px;
